# edge-video

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CHANGELOG_V2_IMPROVEMENTS.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION-SUMMARY.md  LICENSE.MD  Makefile  README.md  REFACTORING_SUMMARY.md  build-windows.sh  config.test.toml  config.toml  config.yaml  docker-compose.yml  go.mod  go.sum  main.go  main_refactored.py  mkdocs.yml  pyproject.toml  repomix-output.xml  requirements-docs.txt  run-docker.sh  setup-dev.sh  test_camera_redis_amqp.py  test_consumer.py
.archive/: README.OLD.md  REFACTORING_CHECKLIST.md  REFACTORING_COMPLETE.md  REFACTORING_GUIDE.md  VHOST_IMPLEMENTATION.md
.claude/: settings.local.json
.github/: copilot-instructions.md
changelog.d/: 1.feature.md  2.security.md  3.feature.md  4.feature.md  README.md  template.md.j2
configs/: README.md  config.memory-control.toml
docs/: CONTRIBUTING.md  MEMORY-CONTROL.md  MKDOCS_GUIDE.md  PRECOMMIT_TOWNCRIER_GUIDE.md  QUICK_REFERENCE.md  TOWNCRIER_SETUP.md  changelog.md  ci-cd-windows.md  improvements-offline-cameras.md  index.md  vhost-based-identification.md
examples/: README.md
scripts/: build-changelog.sh  new-changelog.sh  refactor-repo.sh
src/: video_consumer_app.py
tests/: test_config_manager.py  test_display_manager.py  test_rabbitmq_consumer.py  test_video_consumer_app.py  test_video_processor.py
v2/: .gitignore  Makefile  README.md  camera_stream.go  config.go  config.recommended.yaml  config.yaml  go.mod  go.sum  (+5 more)
(+130 files in other folders)
